Fixed Scrollbar Moving centered content

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+html {
+  scrollbar-gutter: stable both-edges;
+  background-color: black;
+}
